compiler/testData/loadJava/compiledJavaCompareWithKotlin/kotlinSignature/error/WrongFieldName.kt
package test

import java.util.*

public open class WrongFieldName : Object() {
    public var foo : String? = ""
}
